correct alignment of card

--- a/game.css
+++ b/game.css
@@ -1,32 +1,51 @@
-.card {
+/* .card {
     display: flex;
     flex-direction: column;
     align-items: stretch;
     height: 100%;
 
-}
+} */
 
-footer {
-}
-header {
-}
 
 #main {
+    display: flex;
     flex: 1;
+    align-items: center;
     align-content: center;
-    text-align: center;
+    justify-content: center;
+    flex-direction: column;
 }
+#card {
+    display: flex;
+    text-align: center;
+    align-content: center;
+    justify-content: center;
+    flex: 1;
+    flex-direction: column;
+}   
 html, body{
 	height: 100%;
 	width: 100%;
 	margin: 0;
 	padding: 0;
+    display: flex;
 }
 * {
     font-size: 120%;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
 }
-
+aside > div {
+    display: flex;
+    flex-direction: column;
+}
+header, footer {
+    flex: 0 0 auto;
+    background-color:rgba(255,255,255,0.25);;
+}
+.learned-color {
+    background-color: aqua;
+    display: none;
+}
 input {
     display: none;
 }
